Adding setting page

--- a/EyeSpeak/Base.lproj/Main.storyboard
+++ b/EyeSpeak/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQq-Gr-kNC" userLabel="ContentViewController">
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                                 <connections>
-                                    <segue destination="Jgy-U0-B1Z" kind="embed" id="VGF-IP-CWi"/>
+                                    <segue destination="Jgy-U0-B1Z" kind="embed" identifier="ContentViewControllerSegue" id="VGF-IP-CWi"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A16-bV-8FB" customClass="ViewControllerWrapperView" customModule="EyeSpeak" customModuleProvider="target">
