--- a/EyeSpeak/Features/Keyboard/KeyboardKeyGroupCollectionViewCell.xib
+++ b/EyeSpeak/Features/Keyboard/KeyboardKeyGroupCollectionViewCell.xib
@@ -3,45 +3,36 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="KeyboardKeyGroupCollectionViewCell" customModule="EyeSpeak" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
-            <autoresizingMask key="autoresizingMask"/>
-            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
-                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="sef-b4-oBn" customClass="KeyboardKeyGroupCollectionViewCell" customModule="EyeSpeak" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="334" height="229"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ldk-6n-dPb">
+                <rect key="frame" x="0.0" y="0.0" width="334" height="229"/>
+                <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qn0-yK-CCv">
-                        <rect key="frame" x="16" y="44" width="237" height="174"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="45"/>
-                        <color key="textColor" name="DefaultFontColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2y1-Ag-GOD">
+                        <rect key="frame" x="56" y="44" width="222" height="160"/>
+                    </stackView>
                 </subviews>
-            </view>
-            <constraints>
-                <constraint firstItem="qn0-yK-CCv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="k0S-Ij-owV"/>
-                <constraint firstAttribute="trailingMargin" secondItem="qn0-yK-CCv" secondAttribute="trailing" id="pBd-u4-Epe"/>
-                <constraint firstAttribute="bottomMargin" secondItem="qn0-yK-CCv" secondAttribute="bottom" id="sMM-8R-YZ6"/>
-                <constraint firstItem="qn0-yK-CCv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="topMargin" id="vbu-J6-4lZ"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="269" height="218"/>
+                <constraints>
+                    <constraint firstItem="2y1-Ag-GOD" firstAttribute="top" secondItem="ldk-6n-dPb" secondAttribute="topMargin" id="3dw-NH-F7L"/>
+                    <constraint firstItem="2y1-Ag-GOD" firstAttribute="leading" secondItem="ldk-6n-dPb" secondAttribute="leadingMargin" id="PYT-gp-NGf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="2y1-Ag-GOD" secondAttribute="trailing" id="Z0Q-9w-rhR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="2y1-Ag-GOD" secondAttribute="bottom" id="uP3-tw-KEC"/>
+                </constraints>
+                <edgeInsets key="layoutMargins" top="25" left="56" bottom="25" right="56"/>
+            </collectionViewCellContentView>
+            <size key="customSize" width="334" height="229"/>
             <connections>
-                <outlet property="textLabel" destination="qn0-yK-CCv" id="cYX-xz-a2v"/>
+                <outlet property="stackView" destination="2y1-Ag-GOD" id="BbM-V7-eb6"/>
             </connections>
-            <point key="canvasLocation" x="296.37681159420293" y="190.17857142857142"/>
+            <point key="canvasLocation" x="492.75362318840581" y="385.37946428571428"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <namedColor name="DefaultFontColor">
-            <color red="0.81599998474121094" green="0.93199998140335083" blue="0.91299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-    </resources>
 </document>
